--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   <div class="top">
     <div class="top__content">
       <ul class="top__list">
-        <a href="http://www.hudsonpooldist.com/" target="_blank"><li class="top__item">Dealers and Distributors</li></a>
-        <a href="http://americanpool.com/services/pool-maintenance-services/" target="_blank"><li class="top__item top__item--com">Commercial Service</li></a>
-        <img class="top__image" src="./resources/images/action-commercial-icon.png">
+        <li class="top__item">Dealers and Distributors</li>
+        <li class="top__item top__item--com">Commercial Service</li>
+        <li>
+          <img class="top__image" src="./resources/images/action-commercial-icon.png" alt="service go">
+        </li>
       </ul>
     </div>
   </div>
@@ -27,23 +29,21 @@
   <header class="nav__container">
     <nav class="nav">
       <div class="nav__content">
-        <img class="nav__logo" src="./resources/images/pool-pros-logo.png">
-        <a href="#main"><span class="nav__find"><img class="nav__location" src="./resources/images/location-icon.png">FIND A PRO</span></a>
-        <a class="nav__link--mobile" href="#">
-          <img class="nav__button" src="./resources/images/menu-icon-mobile.png">
-        </a>
+        <img class="nav__logo" src="./resources/images/pool-pros-logo.png" alt="pool pro logo">
+        <a class="nav__find" href="#main"><img class="nav__location" src="./resources/images/location-icon.png" alt="location icon">FIND A PRO</a>
+        <a class="nav__link--mobile" href="#"><img class="nav__button" src="./resources/images/menu-icon-mobile.png" alt="menu icon"></a>
       </div>
       <div class="nav__menu">
         <a href="#" class="nav__close">X</a>
         <h3 class="nav__title--mobile">MENU</h3>
         <ul class="nav__list">
-          <li class="nav__li"><a href="#">Pools &amp; Spas</a></li>
-          <li class="nav__li"><a href="#">Supplies</a></li>
-          <li class="nav__li"><a href="#">Resources</a></li>
-          <li class="nav__li nav__li--last"><a href="#">Services</a></li>
+          <li class="nav__li"><a class="nav__li--link" href="#">Pools &amp; Spas</a></li>
+          <li class="nav__li"><a class="nav__li--link" href="#">Supplies</a></li>
+          <li class="nav__li"><a class="nav__li--link" href="#">Resources</a></li>
+          <li class="nav__li nav__li--last"><a class="nav__li--link" href="#">Services</a></li>
           <li class="nav__li nav__li--dk"><a href="#main">
-            <span class="nav__find--dk"><img class="nav__location" src="./resources/images/location-icon.png">Find a Pool Pro</span>
-          </a></li>
+            <span class="nav__find--dk"><img class="nav__location" src="./resources/images/location-icon.png" alt="location icon">Find a Pool Pro</span></a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -58,7 +58,7 @@
     <div class="filters__head">
       <span class="filters__result">7 dealers in 28226</span>
       <a class="filters__mobile" href="#">
-        <span class="filters__title">Filter Results</span>
+        <h3 class="filters__title">Filter Results</h3>
         <span class="filters__arrow">&#x25BE;</span>
       </a>
       <span class="filters__title--desktop">Filter Results</span>
@@ -75,7 +75,7 @@
       
       <input class="filters__input" type="checkbox" id="c4">
       <label class="filters__label" for="c4"><span class="filters__check"></span>Commercial</label>
-      <img class="filters__question" src="./resources/images/tool-tip-icon-filtering.png">
+      <img class="filters__question" src="./resources/images/tool-tip-icon-filtering.png" alt="help icon">
     </form>
   </section>
 
@@ -88,16 +88,16 @@
       </div>
       <a class="business__call" href="tel:+1-888-888-8888">
       <div class="business__phone">
-        <img class="business__image business__icon" src="./resources/images/phone-icon-mobile.png">
+        <img class="business__image business__icon" src="./resources/images/phone-icon-mobile.png" alt="phone icon">
         <span class="business__tap">Tap to call</span>
         <span class="business__number">1.888.888.8888</span>
-        <span class="business__number--desktop"><img class="business__image business__image--num" src="./resources/images/phone-icon-desktop.png" align="middle"> 1.888.888.8888</span>
+        <span class="business__number--desktop"><img class="business__image business__image--num" src="./resources/images/phone-icon-desktop.png" alt="phone icon"> 1.888.888.8888</span>
       </div>
       </a>
       <p class="business__talk">Can't talk now? Click below to send an email.</p>
       <a class="business__email business__email--one" href="#">
       <div class="business__contact">
-        <img class="business__image business__img" src="./resources/images/email-icon.png">
+        <img class="business__image business__img" src="./resources/images/email-icon.png" alt="email icon">
         <span class="business__pro">Contact this Pro</span>
       </div>
       </a>
@@ -110,18 +110,18 @@
       <div class="business__services">
         <div>
           <div class="business__service">
-            <span class="business__asset"><img class="business__image" src="./resources/images/star-installation-pro.png" align="middle"> Installation Pro</span>
+            <span class="business__asset"><img class="business__image" src="./resources/images/star-installation-pro.png" alt="installation icon"> Installation Pro</span>
           </div>
           <div class="business__service">
-            <span class="business__asset"><img class="business__image" src="./resources/images/home-residential-pro.png" align="middle"> Residential Pro</span>
+            <span class="business__asset"><img class="business__image" src="./resources/images/home-residential-pro.png" alt="residental icon"> Residential Pro</span>
           </div>
         </div>
         <div>
           <div class="business__service">
-            <span class="business__asset"><img class="business__image" src="./resources/images/gear-service-pro.png" align="middle"> Service Pro</span>
+            <span class="business__asset"><img class="business__image" src="./resources/images/gear-service-pro.png" alt="service icon"> Service Pro</span>
           </div>
           <div class="business__service">
-            <span class="business__asset business__service--hidden"><img src="./resources/images/gear-residential-pro.png" align="middle"> Commercial Pro</span>
+            <span class="business__asset business__service--hidden"><img src="./resources/images/gear-residential-pro.png" alt="commercial icon"> Commercial Pro</span>
           </div>
         </div>
       </div>
@@ -134,16 +134,16 @@
       </div>
       <a class="business__call" href="tel:+1-888-888-8888">
       <div class="business__phone">
-        <img class="business__image business__icon" src="./resources/images/phone-icon-mobile.png">
+        <img class="business__image business__icon" src="./resources/images/phone-icon-mobile.png" alt="phone icon">
         <span class="business__tap">Tap to call</span>
         <span class="business__number">1.888.888.8888</span>
-        <span class="business__number--desktop"><img class="business__image business__image--num" src="./resources/images/phone-icon-desktop.png" align="middle"> 1.888.888.8888</span>
+        <span class="business__number--desktop"><img class="business__image business__image--num" src="./resources/images/phone-icon-desktop.png" alt="phone icon"> 1.888.888.8888</span>
       </div>
       </a>
       <p class="business__talk">Can't talk now? Click below to send an email.</p>
       <a class="business__email business__email--two" href="#">
       <div class="business__contact">
-        <img class="business__image business__img" src="./resources/images/email-icon.png">
+        <img class="business__image business__img" src="./resources/images/email-icon.png" alt="email-icon">
         <span class="business__pro">Contact this Pro</span>
       </div>
       </a>
@@ -156,21 +156,20 @@
       <div class="business__services">
         <div>
           <div class="business__service">
-            <span class="business__asset"><img class="business__image" src="./resources/images/star-installation-pro.png" align="middle"> Installation Pro</span>
+            <span class="business__asset"><img class="business__image" src="./resources/images/star-installation-pro.png" alt="installation icon"> Installation Pro</span>
           </div>
           <div class="business__service">
-            <span class="business__asset"><img class="business__image" src="./resources/images/home-residential-pro.png" align="middle"> Residential Pro</span>
+            <span class="business__asset"><img class="business__image" src="./resources/images/home-residential-pro.png" alt="residential icon"> Residential Pro</span>
           </div>
         </div>
         <div>
           <div class="business__service">
-            <span class="business__asset"><img class="business__image" src="./resources/images/gear-service-pro.png" align="middle"> Service Pro</span>
+            <span class="business__asset"><img class="business__image" src="./resources/images/gear-service-pro.png" alt="service icon"> Service Pro</span>
           </div>
           <div class="business__service">
-            <span class="business__asset"><img class="business__image" src="./resources/images/users-commercial-pro.png" align="middle"> Commercial Pro</span>
+            <span class="business__asset"><img class="business__image" src="./resources/images/users-commercial-pro.png" alt="commercial icon"> Commercial Pro</span>
           </div>
         </div>
-      </div>
       </div>
     </div>
 
@@ -181,16 +180,16 @@
       </div>
       <a class="business__call" href="tel:+1-888-888-8888">
       <div class="business__phone">
-        <img class="business__image business__icon" src="./resources/images/phone-icon-mobile.png">
+        <img class="business__image business__icon" src="./resources/images/phone-icon-mobile.png" alt="phone icon">
         <span class="business__tap">Tap to call</span>
         <span class="business__number">1.888.888.8888</span>
-        <span class="business__number--desktop"><img class="business__image business__image--num" src="./resources/images/phone-icon-desktop.png" align="middle"> 1.888.888.8888</span>
+        <span class="business__number--desktop"><img class="business__image business__image--num" src="./resources/images/phone-icon-desktop.png" alt="phone icon"> 1.888.888.8888</span>
       </div>
       </a>
       <p class="business__talk">Can't talk now? Click below to send an email.</p>
       <a class="business__email business__email--three" href="#">
       <div class="business__contact">
-        <img class="business__image business__img" src="./resources/images/email-icon.png">
+        <img class="business__image business__img" src="./resources/images/email-icon.png" alt="email icon">
         <span class="business__pro">Contact this Pro</span>
       </div>
       </a>
@@ -203,18 +202,18 @@
       <div class="business__services">
         <div>
           <div class="business__service">
-            <span class="business__asset"><img class="business__image" src="./resources/images/star-installation-pro.png" align="middle"> Installation Pro</span>
+            <span class="business__asset"><img class="business__image" src="./resources/images/star-installation-pro.png" alt="installation icon"> Installation Pro</span>
           </div>
           <div class="business__service">
-            <span class="business__asset"><img class="business__image" src="./resources/images/home-residential-pro.png" align="middle"> Residential Pro</span>
+            <span class="business__asset"><img class="business__image" src="./resources/images/home-residential-pro.png" alt="residential icon"> Residential Pro</span>
           </div>
         </div>
         <div>
           <div class="business__service">
-            <span class="business__asset"><img class="business__image" src="./resources/images/gear-service-pro.png" align="middle"> Service Pro</span>
+            <span class="business__asset"><img class="business__image" src="./resources/images/gear-service-pro.png" alt="service icon"> Service Pro</span>
           </div>
           <div class="business__service">
-            <span class="business__asset"><img class="business__image" src="./resources/images/users-commercial-pro.png" align="middle"> Commercial Pro</span>
+            <span class="business__asset"><img class="business__image" src="./resources/images/users-commercial-pro.png" alt="commercial icon"> Commercial Pro</span>
           </div>
         </div>
       </div>
@@ -227,27 +226,27 @@
     <span class="modal__close">&times;</span>
     <div class="modal__head">
       <p class="modal__email">EMAIL</p>
-      <h1 class="modal__business">Pool Pros</h1>
+      <h2 class="modal__business">Pool Pros</h2>
     </div>
     <!-- Form -->
     <form class="modal__form" name="modal__form" onsubmit="return formValidate()">
       <p class="modal__action">Fill out the form below and a Pool Pro will get in touch.</p>
       <fieldset class="modal__inputs">
-        <img class="modal__circle modal__circle--one" src="./resources/images/circle-form.png">
+        <img class="modal__circle modal__circle--one" src="./resources/images/circle-form.png" alt="modal circle">
         <label class="modal__label">First and last name</label>
         <input class="modal__input modal__input--name" name="name" type="text" oninput="imgValidate()" required>
         
-        <img class="modal__circle modal__circle--two" src="./resources/images/circle-form.png">
+        <img class="modal__circle modal__circle--two" src="./resources/images/circle-form.png" alt="modal circle">
         <label class="modal__label">Phone Number</label>
         <input class="modal__input--num" name="number" type="tel" oninput="imgValidate()" required>
 
-        <img class="modal__circle modal__circle--three" src="./resources/images/circle-form.png">
+        <img class="modal__circle modal__circle--three" src="./resources/images/circle-form.png" alt="modal-circle">
         <label class="modal__label">Email Address</label>
         <input class="modal__input modal__input--email" name="email" type="email" oninput="imgValidate()" required>
 
         <span class="modal__opt">optional</span>
         <label class="modal__label">Comments or questions</label>
-        <textarea class="modal__textarea" id="comment" name="comment" type="text"></textarea>
+        <textarea class="modal__textarea" id="comment" name="comment"></textarea>
 
         <span class="modal__opt--dk">optional</span>
         <label class="modal__label">Do you currently own a pool or spa?</label>
@@ -261,7 +260,7 @@
         <div class="modal__desktop">
           <div class="modal__submit--container">
             <input class="modal__submit--desktop" type="submit" value="Send my email">
-            <img class="modal__arrow" src="./resources/images/next-arrow.png">
+            <img class="modal__arrow" src="./resources/images/next-arrow.png" alt="arrow">
           </div>
         </div>
       </fieldset>
@@ -274,13 +273,13 @@
   <!-- Footer Section -->
   <footer class="footer__container">
     <div class="footer footer--top">
-      <img class="footer__logo" src="./resources/images/pool-pros-logo-footer.png">
+      <img class="footer__logo" src="./resources/images/pool-pros-logo-footer.png" alt="footer logo">
       <div class="footer__social">
         <span class="footer__connect">CONNECT WITH US</span>
         <div class="footer__icons">
-          <a href="https://twitter.com/"><img class="footer__img" src="./resources/images/twitter-icon.png"></a>
-          <a href="https://facebook.com/"><img class="footer__img" src="./resources/images/facebook-icon.png"></a>
-          <a href="https://youtube.com/"><img class="footer__img" src="./resources/images/youtube-icon.png"></a>
+          <a href="https://twitter.com/"><img class="footer__img" src="./resources/images/twitter-icon.png" alt="twitter"></a>
+          <a href="https://facebook.com/"><img class="footer__img" src="./resources/images/facebook-icon.png" alt="facebook"></a>
+          <a href="https://youtube.com/"><img class="footer__img" src="./resources/images/youtube-icon.png" alt="youtube"></a>
         </div>
       </div>
     </div>
