updated modal text

--- a/index.html
+++ b/index.html
@@ -266,6 +266,10 @@
       </fieldset>
     </form>
     <!-- Form End -->
+    <div class="modal__terms">
+      <p class="modal__term">At vero eos et accusamus et iusto odio dignissimos ducimus qui 
+        blanditiis praesentium voluptatum deleniti atque corrupti. Blanditiis praesentium voluptatum.</p>
+    </div>
   </div>
 </section>
 <!-- Contact Modal End -->
